update: merton jump diffusion

--- a/black-scholes/mainBlackScholes.ipynb
+++ b/black-scholes/mainBlackScholes.ipynb
@@ -10,17 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import warnings\n",
+    "import sys\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from datetime import datetime\n",
     "from blackScholesModel import BlackScholesModel\n",
-    "from utilsBlackScholes import *\n",
+    "\n",
+    "sys.path.insert(0, '..')\n",
+    "\n",
+    "from utils import *\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
