fix: improved readability

--- a/jump-diffusion/mainJumpDiffusion.ipynb
+++ b/jump-diffusion/mainJumpDiffusion.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "#### Merton Jump Diffusion Model\n",
-    "This file implements a workflow to analyze and compare the pricing of options for a given stock using the Merton Jump Diffusion model. <br>We first use rough estimates for the variables and subsequently perform optimization to minimize error."
+    "This file implements a workflow to analyze and compare the pricing of options for a given stock using the Merton Jump Diffusion model. <br> The Merton Jump Diffusion model adds jumps to simulate sudden market movements <br>We first use rough estimates for the variables and subsequently perform optimization to minimize error."
    ]
   },
   {
